# PyRx-sample-project

./: .gitignore  README.md  pyproject.toml  pyrx_onload.py  testrunner.py
installer/: 7zSD.sfx  bootstrap.py  build_setup.py  installer.cfg.template  loader.lsp.template  loader.py  pip.ini.template  setup.python3.12.9.bat.template
src/pyrx_sample_project/: cmds.py  rect.py
tests/: test_rect.py
