# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/pyrx_sample_project/_version.py"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[project]
name = "pyrx-sample-project"
dynamic = ["version"]
# authors = [{ name = "...", email = "..." }] # Your name and email here
description = "A sample project for PyRx"   # Brief description of your project
requires-python = ">=3.12.0,<3.13.0"
dependencies = ["cad-pyrx"]

[project.optional-dependencies]
dev = ["pytest", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["src/pyrx_sample_project"]
disable_error_code = ["import-untyped"]
